Added test case for standard farmland activity
Also some code changes based on this example